# show_parent_functions

./: CMakeLists.txt  get_func_name.c
.github/workflows/: cmake-multi-platform.yml
